libs/jsruntime/src/llvmir/bridge.hh

// Module

struct Module;
struct BasicBlock;
struct LambdaIr;
struct BooleanIr;
struct NumberIr;
struct ClosureIr;
struct CoroutineIr;
struct PromiseIr;
struct ValueIr;
struct ArgvIr;
Compiler* compiler_peer_new();
void compiler_peer_delete(Compiler* self);
void compiler_peer_start(Compiler* self, bool enable_labels);
Module* compiler_peer_end(Compiler* self);
void compiler_peer_set_data_layout(Compiler* self, const char* data_layout);
void compiler_peer_set_target_triple(Compiler* self, const char* triple);
// function
void compiler_peer_start_function(Compiler* self, const char* name);
void compiler_peer_end_function(Compiler* self, bool optimize);
void compiler_peer_set_locals_block(Compiler* self, BasicBlock* block);
LambdaIr* compiler_peer_get_function(Compiler* self, uint32_t func_id, const char* name);
// basic block
BasicBlock* compiler_peer_create_basic_block(Compiler* self, const char* name, size_t name_len);
BasicBlock* compiler_peer_get_basic_block(const Compiler* self);
void compiler_peer_set_basic_block(Compiler* self, BasicBlock* block);
void compiler_peer_move_basic_block_after(Compiler* self, BasicBlock* block);
bool compiler_peer_is_basic_block_terminated(Compiler* self, BasicBlock* block);
// jump
void compiler_peer_create_br(Compiler* self, BasicBlock* block);
void compiler_peer_create_cond_br(Compiler* self,
    BooleanIr* cond,
    BasicBlock* then_block,
    BasicBlock* else_block);
// undefined
BooleanIr* compiler_peer_create_is_undefined(Compiler* self, ValueIr* value);
// null
BooleanIr* compiler_peer_create_is_null(Compiler* self, ValueIr* value);
BooleanIr* compiler_peer_create_is_non_nullish(Compiler* self, ValueIr* value);
// boolean
BooleanIr* compiler_peer_create_is_boolean(Compiler* self, ValueIr* value);
BooleanIr* compiler_peer_create_is_same_boolean(Compiler* self, BooleanIr* a, BooleanIr* b);
BooleanIr* compiler_peer_create_number_to_boolean(Compiler* self, NumberIr* number);
BooleanIr* compiler_peer_create_to_boolean(Compiler* self, ValueIr* value);
BooleanIr* compiler_peer_get_boolean(Compiler* self, bool value);
BooleanIr* compiler_peer_create_logical_not(Compiler* self, BooleanIr* boolean);
BooleanIr* compiler_peer_create_boolean_phi(Compiler* self,
    BooleanIr* then_value,
    BasicBlock* then_block,
    BooleanIr* else_value,
    BasicBlock* else_block);
// print
void compiler_peer_create_print_value(Compiler* self, ValueIr* value, const char* msg);
// unreachable
void compiler_peer_create_unreachable(Compiler* self, const char* msg);