libs/jsruntime/src/llvmir/compiler/bridge.rs


    pub fn create_read_number_from_scratch_buffer(&self, offset: u32) -> NumberIr {
        number_ir! {
            compiler_peer_create_read_number_from_scratch_buffer(self.0, offset)
        }
    }

    pub fn create_write_string_to_scratch_buffer(&self, offset: u32, value: Char16SeqIr) {
        unsafe {
            compiler_peer_create_write_string_to_scratch_buffer(self.0, offset, value.0);
        }
    }

    pub fn create_read_string_from_scratch_buffer(&self, offset: u32) -> Char16SeqIr {
        char16_seq_ir! {
            compiler_peer_create_read_string_from_scratch_buffer(self.0, offset)
        }
    }

    pub fn create_write_closure_to_scratch_buffer(&self, offset: u32, value: ClosureIr) {
        unsafe {
            compiler_peer_create_write_closure_to_scratch_buffer(self.0, offset, value.0);
        }
    }

    pub fn create_read_closure_from_scratch_buffer(&self, offset: u32) -> ClosureIr {
        closure_ir! {
            compiler_peer_create_read_closure_from_scratch_buffer(self.0, offset)
        }
    }

    pub fn create_write_object_to_scratch_buffer(&self, offset: u32, value: ObjectIr) {
        unsafe {
            compiler_peer_create_write_object_to_scratch_buffer(self.0, offset, value.0);
        }
    }

    pub fn create_read_object_from_scratch_buffer(&self, offset: u32) -> ObjectIr {
        object_ir! {
            compiler_peer_create_read_object_from_scratch_buffer(self.0, offset)
        }
    }

    pub fn create_write_promise_to_scratch_buffer(&self, offset: u32, value: PromiseIr) {
        unsafe {
            compiler_peer_create_write_promise_to_scratch_buffer(self.0, offset, value.0);
        }
    }

    pub fn create_read_promise_from_scratch_buffer(&self, offset: u32) -> PromiseIr {
        promise_ir! {
            compiler_peer_create_read_promise_from_scratch_buffer(self.0, offset)
        }
    }

    pub fn create_write_value_to_scratch_buffer(&self, offset: u32, value: ValueIr) {
        unsafe {
            compiler_peer_create_write_value_to_scratch_buffer(self.0, offset, value.0);
        }
    }

    pub fn create_read_value_from_scratch_buffer(&self, offset: u32) -> ValueIr {
        value_ir! {
            compiler_peer_create_read_value_from_scratch_buffer(self.0, offset)
        }
    }

    // scope cleanup checker

    pub fn enable_scope_cleanup_checker(&self, is_coroutine: bool) {
        unsafe {
            compiler_peer_enable_scope_cleanup_checker(self.0, is_coroutine);
        }
    }

    pub fn set_scope_id_for_checker(&self, scope_ref: ScopeRef) {
        unsafe {
            compiler_peer_set_scope_id_for_checker(self.0, scope_ref.id());
        }
    }

    pub fn assert_scope_id(&self, expected: ScopeRef) {
        unsafe {
            compiler_peer_assert_scope_id(self.0, expected.id());
        }
    }

    // print

    #[allow(unused)]
    pub fn create_print_boolean(&self, value: BooleanIr, msg: &CStr) {
        unsafe {
            compiler_peer_create_print_boolean(self.0, value.0, msg.as_ptr());
        }
    }

    #[allow(unused)]
    pub fn create_print_string(&self, value: Char16SeqIr, msg: &CStr) {
        unsafe {
            compiler_peer_create_print_string(self.0, value.0, msg.as_ptr());
        }
    }

    #[allow(unused)]
    pub fn create_print_value(&self, value: ValueIr, msg: &CStr) {
        unsafe {
            compiler_peer_create_print_value(self.0, value.0, msg.as_ptr());
        }
    }

    #[allow(unused)]
    pub fn create_print_message(&self, msg: &CStr) {
        unsafe {
            compiler_peer_create_print_message(self.0, msg.as_ptr());
        }
    }

    // debugger

    #[allow(unused)]
    pub fn create_debugger(&self) {
        unsafe {
            compiler_peer_create_debugger(self.0);
        }
    }

    // assertions

    #[allow(unused)]
    pub fn create_assert(&self, assert: BooleanIr, msg: &CStr) {
        unsafe {
            compiler_peer_create_assert(self.0, assert.0, msg.as_ptr());
        }
    }

    #[allow(unused)]
    pub fn create_unreachable(&self, msg: &CStr) {
        unsafe {
            compiler_peer_create_unreachable(self.0, msg.as_ptr());
        }
    }
}

impl Default for CompilerBridge {
    fn default() -> Self {
        Self::new()
    }
}

impl Drop for CompilerBridge {
    fn drop(&mut self) {
        unsafe {
            compiler_peer_delete(self.0);
        }
    }
}

impl BasicBlock {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_basic_block_name_or_as_operand(self.0, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl LambdaIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl BooleanIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl NumberIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl Char16SeqIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl ClosureIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl CoroutineIr {
    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl PromiseIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl ObjectIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0 as ValueIrPtr, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl ValueIr {
    pub const NONE: Self = Self(std::ptr::null_mut());

    pub fn get_name_or_as_operand<'a>(&self, buf: *mut std::ffi::c_char, len: usize) -> &'a CStr {
        unsafe {
            compiler_peer_get_value_name_or_as_operand(self.0, buf, len);
            CStr::from_ptr(buf)
        }
    }
}

impl ArgvIr {
    pub const NONE: Self = Self(std::ptr::null_mut());
}

// DO NOT USE MACROS FOR THE FOLLOWING TYPE DEFINITIONS.
// cbindgen does not support macro expansions.
type CompilerPeer = *mut c_void;
type BasicBlockPtr = *mut c_void;
type LambdaIrPtr = *mut c_void;
type BooleanIrPtr = *mut c_void;
type NumberIrPtr = *mut c_void;
type Char16SeqIrPtr = *mut c_void;
type ClosureIrPtr = *mut c_void;
type CoroutineIrPtr = *mut c_void;
type PromiseIrPtr = *mut c_void;
type ObjectIrPtr = *mut c_void;
type ValueIrPtr = *mut c_void;
type ArgvIrPtr = *mut c_void;
type StatusIrPtr = *mut c_void;
type CaptureIrPtr = *mut c_void;
type SwitchIrPtr = *mut c_void;

#[link(name = "llvmir")]
extern "C" {
    fn compiler_peer_new() -> CompilerPeer;
    fn compiler_peer_delete(peer: CompilerPeer);
    fn compiler_peer_start(peer: CompilerPeer);
    fn compiler_peer_end(peer: CompilerPeer) -> ModulePeer;
    fn compiler_peer_set_data_layout(peer: CompilerPeer, data_layout: *const c_char);
    fn compiler_peer_set_target_triple(peer: CompilerPeer, triple: *const c_char);
    fn compiler_peer_enable_labels(peer: CompilerPeer);

    // function

    fn compiler_peer_start_function(peer: CompilerPeer, lambda_id: u32);
    fn compiler_peer_end_function(peer: CompilerPeer, optimize: bool);
    fn compiler_peer_set_locals_block(peer: CompilerPeer, block: BasicBlockPtr);
    fn compiler_peer_get_function(peer: CompilerPeer, lambda_id: u32) -> LambdaIrPtr;

    // basic block

    fn compiler_peer_create_basic_block(
        peer: CompilerPeer,
        name: *const c_char,
        name_len: usize,
    ) -> BasicBlockPtr;
    fn compiler_peer_get_basic_block(peer: CompilerPeer) -> BasicBlockPtr;
    fn compiler_peer_set_basic_block(peer: CompilerPeer, block: BasicBlockPtr);
    fn compiler_peer_move_basic_block_after(peer: CompilerPeer, block: BasicBlockPtr);
    fn compiler_peer_is_basic_block_terminated(peer: CompilerPeer, block: BasicBlockPtr) -> bool;

    // jump

    fn compiler_peer_create_br(peer: CompilerPeer, block: BasicBlockPtr);
    fn compiler_peer_create_cond_br(
        peer: CompilerPeer,
        cond: BooleanIrPtr,
        then_block: BasicBlockPtr,
        else_block: BasicBlockPtr,
    );

    // undefined

    fn compiler_peer_create_is_undefined(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;

    // null

    fn compiler_peer_create_is_null(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_is_non_nullish(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;

    // boolean

    fn compiler_peer_create_is_boolean(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_boolean(
        peer: CompilerPeer,
        a: BooleanIrPtr,
        b: BooleanIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_number_to_boolean(
        peer: CompilerPeer,
        number: NumberIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_to_boolean(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_get_boolean(peer: CompilerPeer, value: bool) -> BooleanIrPtr;
    fn compiler_peer_create_logical_not(peer: CompilerPeer, value: BooleanIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_boolean_phi(
        peer: CompilerPeer,
        then_value: BooleanIrPtr,
        then_block: BasicBlockPtr,
        else_value: BooleanIrPtr,
        else_block: BasicBlockPtr,
    ) -> BooleanIrPtr;

    // number
